# odin-slm

./: .gitignore  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  DATASET_ANALYSIS_SUMMARY.md  ENVIRONMENT_ISSUE.md  INVESTIGATION_REPORT.md  MEDICAL_NER_RE_SUMMARY.md  QUICKSTART.md  README.md  SETUP_SUMMARY.md  TRAINING_READY.md  TRAINING_RESULTS.md  TRAINING_STATUS.md  V1_VS_V2_COMPARISON.md  analyze_direction_reversal.py  analyze_relation_errors.py  diagnose_v6_outputs.py  diagnose_v9_outputs.py  docker-compose.yml  main.py  mlflow_config.py  pyproject.toml  test_base_model.py  test_v1_greedy.py  test_v1_inference.py  test_v1_real_example.py  test_v2_real_example.py  test_v4_inference.py  train.py  train_simple.py  v6_evaluation.txt
configs/: medical_ner_re_config.yaml  medical_ner_re_config_v10.yaml  medical_ner_re_config_v11.yaml  medical_ner_re_config_v12.yaml  medical_ner_re_config_v12b.yaml  medical_ner_re_config_v13.yaml  medical_ner_re_config_v14.yaml  medical_ner_re_config_v15.yaml  medical_ner_re_config_v2.yaml  medical_ner_re_config_v3_stage1.yaml  medical_ner_re_config_v3_stage2.yaml  medical_ner_re_config_v4.yaml  medical_ner_re_config_v5.yaml  medical_ner_re_config_v6.yaml  medical_ner_re_config_v7.yaml  medical_ner_re_config_v8.yaml  medical_ner_re_config_v9.yaml  training_config.yaml
data/datasets/: medical_ner_re_test.json
docs/: EXPERIMENT_TRACKING_PLAN.md  Hypergraph_Integration_Analysis.docx  Medical_NER_RE_QuickStart.md  Medical_NER_RE_Research.md  SLM_End_to_End_Guide.md  SLM_Training_Research_Report.docx  WARNINGS_EXPLAINED.md
notebooks/: 01_quickstart.ipynb  inference_demo.ipynb
notebooks/unsloth_compiled_cache/: UnslothBCOTrainer.py  UnslothCPOTrainer.py  UnslothDPOTrainer.py  UnslothGKDTrainer.py  UnslothGRPOTrainer.py  UnslothKTOTrainer.py  UnslothNashMDTrainer.py  UnslothORPOTrainer.py  UnslothOnlineDPOTrainer.py  UnslothPPOTrainer.py  UnslothPRMTrainer.py  (+3 more)
scripts/: analyze_dataset_quality.py  backfill_mlflow.py  combine_datasets.py  convert_ade_corpus.py  convert_bc5cdr.py  convert_biored.py  deduplicate_relations.py  evaluate_medical_ner.py  extract_entities.py  format_for_training.py  generate_medical_dataset.py  inspect_dataset.py  push_dataset_hf.py  push_model_hf.py  register_models_mlflow.py  reset_cuda.sh  setup.sh  train_medical_ner.py  train_medical_ner_v3.py  verify_setup.py
unsloth_compiled_cache/: UnslothDPOTrainer.py  UnslothGRPOTrainer.py
(+47 files in other folders)
