[project]
name = "odin-slm"
version = "0.1.0"
description = "SLM Training with Unsloth - Optimized for hypergraph integration and knowledge representation"
requires-python = ">=3.12"
dependencies = [
    "unsloth[colab-new] @ git+https://github.com/unslothai/unsloth.git",
    "torch>=2.6.0",
    "transformers>=4.45.0",
    "datasets>=3.2.0",
    "accelerate>=0.20.0",
    "bitsandbytes>=0.45.0",
    "trl>=0.12.0",
    "peft>=0.13.0",
    "wandb>=0.18.0",
    "mlflow>=2.10.0",
    "huggingface-hub>=0.26.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.6.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
    "rich>=13.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "black>=24.10.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.black]
line-length = 100
target-version = ["py312"]
